more re-organizing

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-Bad/Chimney/Data/BB*/**/*.dat
-Good/Chimney/Data/BB*/**/*.dat
-Bad/Chimney/Data/BB*/**/*.hobo
-Good/Chimney/Data/BB*/**/*.hobo
+**10Hz*.dat
+**30Min*.dat
+**.hobo
